# esp32-network-component

./: CMakeLists.txt  Kconfig.projbuild  README.md  ethernet.h  network.c  wifi.c  wifi.h
include/: blufi.h  network.h  wifi.h
src/: blufi.c  blufi_init.c  blufi_security.c  ethernet.c  wifi.c
